{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 139,
  "lineage": "a80b97d0-9c42-88ab-e179-8c9089bfa9e2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638353384455:internet-gateway/igw-0cdfbf342b4960ba4",
            "id": "igw-0cdfbf342b4960ba4",
            "owner_id": "638353384455",
            "tags": {
              "Name": "tcw_igw"
            },
            "tags_all": {
              "Name": "tcw_igw"
            },
            "vpc_id": "vpc-034ea44a189e369e9"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cdfbf342b4960ba4",
            "id": "r-rtb-068bc49aa3ac947941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-068bc49aa3ac94794",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myIGW",
            "aws_route_table.public_route_table",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638353384455:route-table/rtb-0bd13f032e1d45d64",
            "id": "rtb-0bd13f032e1d45d64",
            "owner_id": "638353384455",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tcw_database_route_table"
            },
            "tags_all": {
              "Name": "tcw_database_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-034ea44a189e369e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638353384455:route-table/rtb-068bc49aa3ac94794",
            "id": "rtb-068bc49aa3ac94794",
            "owner_id": "638353384455",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tcw_public_route_table"
            },
            "tags_all": {
              "Name": "tcw_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-034ea44a189e369e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba19fbb127f3055c",
            "route_table_id": "rtb-0bd13f032e1d45d64",
            "subnet_id": "subnet-0f2898cfc131418a0"
          },
          "dependencies": [
            "aws_route_table.database_route_table",
            "aws_subnet.database_subnet_1",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c72a209dca07a0f",
            "route_table_id": "rtb-0bd13f032e1d45d64",
            "subnet_id": "subnet-04b6940c181ff59d8"
          },
          "dependencies": [
            "aws_route_table.database_route_table",
            "aws_subnet.database_subnet_2",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0572c3b6dd3412b5a",
            "route_table_id": "rtb-068bc49aa3ac94794",
            "subnet_id": "subnet-0332318929cc726df"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0def853d20b35df13",
            "route_table_id": "rtb-068bc49aa3ac94794",
            "subnet_id": "subnet-0fb889b0d9f74564c"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638353384455:security-group/sg-0c0ee2f0fe504fd64",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0ee2f0fe504fd64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "tcw_security_group",
            "name_prefix": "",
            "owner_id": "638353384455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tcw_security_group"
            },
            "tags_all": {
              "Name": "tcw_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-034ea44a189e369e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638353384455:subnet/subnet-0f2898cfc131418a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2898cfc131418a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "638353384455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcw_database_subnet_az_1a"
            },
            "tags_all": {
              "Name": "tcw_database_subnet_az_1a"
            },
            "vpc_id": "vpc-034ea44a189e369e9"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638353384455:subnet/subnet-04b6940c181ff59d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b6940c181ff59d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "638353384455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcw_database_subnet_az_1b"
            },
            "tags_all": {
              "Name": "tcw_database_subnet_az_1b"
            },
            "vpc_id": "vpc-034ea44a189e369e9"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638353384455:subnet/subnet-0332318929cc726df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0332318929cc726df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "638353384455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcw_public_subnet_az_1a"
            },
            "tags_all": {
              "Name": "tcw_public_subnet_az_1a"
            },
            "vpc_id": "vpc-034ea44a189e369e9"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638353384455:subnet/subnet-0fb889b0d9f74564c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb889b0d9f74564c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "638353384455",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcw_public_subnet_az_1b"
            },
            "tags_all": {
              "Name": "tcw_public_subnet_az_1b"
            },
            "vpc_id": "vpc-034ea44a189e369e9"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638353384455:vpc/vpc-034ea44a189e369e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-021d4c1dd7815876f",
            "default_route_table_id": "rtb-0821853b2cac5f10e",
            "default_security_group_id": "sg-0cb674b28b0d5db9f",
            "dhcp_options_id": "dopt-05101273df7374a25",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-034ea44a189e369e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0821853b2cac5f10e",
            "owner_id": "638353384455",
            "tags": {
              "Name": "tcw_vpc"
            },
            "tags_all": {
              "Name": "tcw_vpc"
            }
          }
        }
      ]
    }
  ]
}